--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
     "@nx/react": "21.2.3",
     "@nx/vite": "21.2.3",
     "@nx/web": "21.2.3",
+    "@types/cypress": "^1.1.6",
     "@types/jest": "^30.0.0",
     "@types/node": "24.0.13",
     "@types/react": "19.0.0",
@@ -26,6 +27,7 @@
     "@vitest/ui": "^3.0.0",
     "babel-jest": "^29.7.0",
     "cypress": "^14.2.1",
+    "cypress-image-diff-js": "^2.4.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-cypress": "^3.5.0",
