--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,6 +18,7 @@
     "@nx/web": "21.2.3",
     "@types/cypress": "^1.1.6",
     "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
     "@types/node": "24.0.13",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -39,6 +40,7 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "jsonc-eslint-parser": "^2.4.0",
+    "lodash": "^4.17.21",
     "nx": "21.2.3",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
